# h-booru

./: .gitignore  README.md  h-booru.cabal
src/: HBooru.hs  Main.hs
src/HBooru/: Gelbooru.hs  Network.hs  Types.hs
src/HBooru/Parsers/: FieldParsers.hs  Gelbooru.hs  GenericBooru.hs  Ichijou.hs  Konachan.hs  Safebooru.hs  Yandere.hs
src/HBooru/Parsers/GenericBooru/: TH.hs
